@@ -401,6 +401,8 @@ and since our choice of $\vect{v}$ was arbitrary we have function equality, $\co
 </diagram>
 </p>
 
+<p>Many will call an injective and surjective function a <define>bijective</define> function or just a <define>bijection</define>.  <acroref type="theorem" acro="ILTIS" /> tells us that this is just a synonym for the term invertible (which we will use exclusively).</p>
+
 <p>We can follow the constructive approach of the proof of <acroref type="theorem" acro="ILTIS" /> to construct the inverse of a specific linear transformation, as the next example shows.</p>
 
 <example acro="CIVLT" index="invertible linear transformations!computing">
@@ -598,7 +600,7 @@ preimages
 </output>
 </sage>
 
-Then we define a new linear transformation, from <code>V</code> to <code>U</code>, which turns it around and uses the preimages as a set of images defining the new linear transformation.  Explain to yourself how we know that <code>preimages</code> is a basis for <code>U</code>, and why this will create a bijection.
+Then we define a new linear transformation, from <code>V</code> to <code>U</code>, which turns it around and uses the preimages as a set of images defining the new linear transformation.  Explain to yourself how we know that <code>preimages</code> is a basis for <code>U</code>, and why this will create an invertible linear transformation.
 <sage>
 <input>S = linear_transformation(V, U, preimages)
 S
@@ -621,7 +623,7 @@ Codomain: Vector space of dimension 4 over Rational Field
 </sage>
 
 While this is a simple two-step procedure (form preimages, construct linear transformation), realize that this is <em>not</em> the process that Sage uses internally.<br /><br />
-Notice that the essence of this construction is that when we work with a bijective linear transformation, the method <code>.preimage_representative()</code> behaves as a function (we mean the precise mathematical definition here) <mdash /> it is always defined and always produces just one well-defined output.  Here the <code>linear_transformation()</code> constructor is extending it to a linear function based on its action on a (finite) basis of the domain.
+Notice that the essence of this construction is that when we work with an invertible linear transformation, the method <code>.preimage_representative()</code> behaves as a function (we mean the precise mathematical definition here) <mdash /> it is always defined and always produces just one well-defined output.  Here the <code>linear_transformation()</code> constructor is extending it to a linear function based on its action on a (finite) basis of the domain.
 
 
 </sageadvice>
