@@ -1264,7 +1264,7 @@ is a basis for $\rng{T}$.
 
 <sageadvice acro="LTR" index="linear transformation!restrictions">
 <title>Linear Transformation Restrictions</title>
-<acroref type="theorem" acro="KNSI" /> and <acroref type="theorem" acro="RCSI" /> have two of the most subtle proofs we have seen so far.  The conclusion that two vector spaces are isomorphic is established by actually constructing an isomorphism between the vector spaces.  To build the isomorphism, we begin with a familar object, a vector representation linear transformation, but the hard work is showing that we can <q>restrict</q> the domain and codomain of this function and still arrive at a legitimate (bijective) linear transformation.  In an effort to make the proofs more concrete, we will walk through a nontrivial example for <acroref type="theorem" acro="KNSI" />, and you might try to do the same for <acroref type="theorem" acro="RCSI" />.  (An understanding of this subsection is not needed for the remainder <mdash /> its second purpose is to demonstrate some of the powerful tools Sage provides.)<br /><br />
+<acroref type="theorem" acro="KNSI" /> and <acroref type="theorem" acro="RCSI" /> have two of the most subtle proofs we have seen so far.  The conclusion that two vector spaces are isomorphic is established by actually constructing an isomorphism between the vector spaces.  To build the isomorphism, we begin with a familar object, a vector representation linear transformation, but the hard work is showing that we can <q>restrict</q> the domain and codomain of this function and still arrive at a legitimate (invertible) linear transformation.  In an effort to make the proofs more concrete, we will walk through a nontrivial example for <acroref type="theorem" acro="KNSI" />, and you might try to do the same for <acroref type="theorem" acro="RCSI" />.  (An understanding of this subsection is not needed for the remainder <mdash /> its second purpose is to demonstrate some of the powerful tools Sage provides.)<br /><br />
 Here are the pieces.  We build a linear transformation with two different representations, one with respect to standard bases, the other with respect to less-obvious bases.
 <sage>
 <input>x1, x2, x3, x4, x5 = var('x1, x2, x3, x4, x5')
@@ -1353,7 +1353,7 @@ The next two steps of the proof show that the restriction is injective (easy in 
 </output>
 </sage>
 
-Verified as a bijection, <code>rho_restrict</code> qualifies as an isomorphism between the linear transformation kernel, <code>K</code>, and the matrix representation null space, <code>MK</code>.  Only an example, but still very nice.  Your turn <mdash /> can you create a verfication of <acroref type="theorem" acro="RCSI" /> (for this example, or some other nontrivial example you might create yourself)?
+Verified as invertible, <code>rho_restrict</code> qualifies as an isomorphism between the linear transformation kernel, <code>K</code>, and the matrix representation null space, <code>MK</code>.  Only an example, but still very nice.  Your turn <mdash /> can you create a verfication of <acroref type="theorem" acro="RCSI" /> (for this example, or some other nontrivial example you might create yourself)?
 
 
 </sageadvice>
